# pigeon-client.github.io

./: CLAUDE.md  Makefile  README.md  biome.json  index.html  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.claude/: settings.local.json
.opencode/: opencode.json
.playwright-mcp/: page-2026-06-11T18-54-42-052Z.yml  page-2026-06-11T18-58-35-516Z.yml  page-2026-06-11T19-11-45-876Z.yml  page-2026-06-11T19-11-53-702Z.yml  page-2026-06-11T19-12-50-273Z.yml  page-2026-06-11T19-13-10-120Z.yml  page-2026-06-11T19-13-20-155Z.yml  page-2026-06-11T19-54-08-355Z.yml  page-2026-06-11T19-55-06-312Z.yml  page-2026-06-11T19-55-31-276Z.yml  page-2026-06-11T19-55-40-288Z.yml  page-2026-06-11T19-56-27-120Z.yml  page-2026-06-11T19-56-38-701Z.yml  page-2026-06-11T19-57-38-726Z.yml  page-2026-06-11T19-57-51-576Z.yml  page-2026-06-11T19-58-19-061Z.yml  page-2026-06-11T19-58-46-914Z.yml  page-2026-06-11T19-59-08-199Z.yml  page-2026-06-11T19-59-28-555Z.yml  page-2026-06-11T20-00-02-704Z.yml  page-2026-06-11T20-00-10-436Z.yml  page-2026-06-11T20-00-45-771Z.yml  page-2026-06-11T20-05-10-898Z.yml  page-2026-06-11T20-06-09-871Z.yml  page-2026-06-11T20-06-19-493Z.yml  page-2026-06-11T20-06-35-754Z.yml  page-2026-06-11T20-30-38-853Z.yml  page-2026-06-11T20-34-36-993Z.yml  snapshot-initial.txt  snapshot-preact.yml
keys/: app.key.pub
scripts/: install.sh  version-bump.js
site/: index.html  package-lock.json  package.json
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs
(+81 files in other folders)
